--- a/CrochetByJk/Content/MailTemplates/newsletter_template.html
+++ b/CrochetByJk/Content/MailTemplates/newsletter_template.html
@@ -1,7 +1,7 @@
-﻿<!DOCTYPE HTML PUBLIC "-//W3C//DTD XHTML 1.0 Transitional //EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<!--[if IE]><html xmlns="http://www.w3.org/1999/xhtml" class="ie-browser" xmlns:v="urn:schemas-microsoft-com:vml" xmlns:o="urn:schemas-microsoft-com:office:office"><![endif]-->
+﻿<!DOCTYPE HTML PUBLIC "-//W3C//DTD XHTML 1.0 Transitional //EN" "https://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!--[if IE]><html xmlns="https://www.w3.org/1999/xhtml" class="ie-browser" xmlns:v="urn:schemas-microsoft-com:vml" xmlns:o="urn:schemas-microsoft-com:office:office"><![endif]-->
 <!--[if !IE]><!-->
-<html style="margin: 0;padding: 0;" xmlns="http://www.w3.org/1999/xhtml">
+<html style="margin: 0;padding: 0;" xmlns="https://www.w3.org/1999/xhtml">
 <!--<![endif]-->
 
 <head>
@@ -12,11 +12,11 @@
      </o:OfficeDocumentSettings>
     </xml><![endif]-->
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <meta name="viewport" content="width=device-width">
+  <meta name="viewport" content="width=device-wclientIdth">
   <!--[if !mso]><!-->
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <!--<![endif]-->
-  <link href='http://fonts.googleapis.com/css?family=Prompt&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Prompt&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
   <title>Nowy produkt!</title>
   <style type="text/css" id="media-query">
     body {
@@ -223,10 +223,10 @@
         class="block-grid ">
         <div style="border-collapse: collapse;display: table;width: 100%;">
           <!--[if (mso)|(IE)]><table width="100%" cellpadding="0" cellspacing="0" border="0"><tr><td style="background-color:transparent;" align="center"><table cellpadding="0" cellspacing="0" border="0" style="width: 500px;"><tr class="layout-full-width" style="background-color:transparent;"><![endif]-->
-          <!--[if (mso)|(IE)]><td align="center" width="500" style=" width:500px; padding-right: 0px; padding-left: 0px; border-top: 0px solid transparent; border-left: 0px solid transparent; border-bottom: 0px solid transparent; border-right: 0px solid transparent;" valign="top"><![endif]-->
+          <!--[if (mso)|(IE)]><td align="center" wclientIdth="500" style=" width:500px; padding-right: 0px; padding-left: 0px; border-top: 0px solid transparent; border-left: 0px solclientId transparent; border-bottom: 0px solclientId transparent; border-right: 0px solclientId transparent;" valign="top"><![endif]-->
           <div class="col num12" style="min-width: 320px;max-width: 500px;width: 500px;width: calc(18000% - 89500px);background-color: transparent;">
             <!--[if (!mso)&(!IE)]><!-->
-            <div style="border-top: 0px solid transparent; border-left: 0px solid transparent; border-bottom: 0px solid transparent; border-right: 0px solid transparent;">
+            <div style="border-top: 0px solid transparent; border-left: 0px solclientId transparent; border-bottom: 0px solclientId transparent; border-right: 0px solclientId transparent;">
               <!--<![endif]-->
               <div style="background-color: transparent;">
                 <div style="line-height: 5px; font-size:1px">&nbsp;</div>
@@ -266,10 +266,10 @@
       class="block-grid ">
       <div style="border-collapse: collapse;display: table;width: 100%;">
         <!--[if (mso)|(IE)]><table width="100%" cellpadding="0" cellspacing="0" border="0"><tr><td style="background-color:#FFFFFF;" align="center"><table cellpadding="0" cellspacing="0" border="0" style="width: 500px;"><tr class="layout-full-width" style="background-color:transparent;"><![endif]-->
-        <!--[if (mso)|(IE)]><td align="center" width="500" style=" width:500px; padding-right: 0px; padding-left: 0px; border-top: 0px solid transparent; border-left: 0px solid transparent; border-bottom: 0px solid transparent; border-right: 0px solid transparent;" valign="top"><![endif]-->
+        <!--[if (mso)|(IE)]><td align="center" wclientIdth="500" style=" width:500px; padding-right: 0px; padding-left: 0px; border-top: 0px solid transparent; border-left: 0px solclientId transparent; border-bottom: 0px solclientId transparent; border-right: 0px solclientId transparent;" valign="top"><![endif]-->
         <div class="col num12" style="min-width: 320px;max-width: 500px;width: 500px;width: calc(18000% - 89500px);background-color: transparent;">
           <!--[if (!mso)&(!IE)]><!-->
-          <div style="border-top: 0px solid transparent; border-left: 0px solid transparent; border-bottom: 0px solid transparent; border-right: 0px solid transparent;">
+          <div style="border-top: 0px solid transparent; border-left: 0px solclientId transparent; border-bottom: 0px solclientId transparent; border-right: 0px solclientId transparent;">
             <!--<![endif]-->
             <div style="background-color: transparent;">
               <div style="width: 100% !important;">
@@ -313,10 +313,10 @@
       class="block-grid ">
       <div style="border-collapse: collapse;display: table;width: 100%;">
         <!--[if (mso)|(IE)]><table width="100%" cellpadding="0" cellspacing="0" border="0"><tr><td style="background-color:#FFFFFF;" align="center"><table cellpadding="0" cellspacing="0" border="0" style="width: 500px;"><tr class="layout-full-width" style="background-color:transparent;"><![endif]-->
-        <!--[if (mso)|(IE)]><td align="center" width="500" style=" width:500px; padding-right: 0px; padding-left: 0px; border-top: 0px solid transparent; border-left: 0px solid transparent; border-bottom: 0px solid transparent; border-right: 0px solid transparent;" valign="top"><![endif]-->
+        <!--[if (mso)|(IE)]><td align="center" wclientIdth="500" style=" width:500px; padding-right: 0px; padding-left: 0px; border-top: 0px solid transparent; border-left: 0px solclientId transparent; border-bottom: 0px solclientId transparent; border-right: 0px solclientId transparent;" valign="top"><![endif]-->
         <div class="col num12" style="min-width: 320px;max-width: 500px;width: 500px;width: calc(18000% - 89500px);background-color: transparent;">
           <!--[if (!mso)&(!IE)]><!-->
-          <div style="border-top: 0px solid transparent; border-left: 0px solid transparent; border-bottom: 0px solid transparent; border-right: 0px solid transparent;">
+          <div style="border-top: 0px solid transparent; border-left: 0px solclientId transparent; border-bottom: 0px solclientId transparent; border-right: 0px solclientId transparent;">
             <!--<![endif]-->
             <div style="background-color: transparent;">
               <div style="line-height: 30px; font-size:1px">&nbsp;</div>
@@ -330,38 +330,47 @@
                     <p style="margin: 0;font-size: 18px;line-height: 22px;text-align: center"><span style="font-size: 24px; line-height: 28px;"><strong></strong></span></p>
                   </div>
                   <!--[if mso]></td></tr></table><![endif]-->
-                  <div style="line-height: 10px; font-size: 1px">&nbsp;</div>
+                 
                   <!--[if !mso]><!-->
                 </div>
                 <!--<![endif]-->
               </div>
-              <div style="width: 100% !important;">
+              <!--<div style="width: 100% !important;">-->
                 <!--[if !mso]><!-->
-                <div style="Margin-right: 10px; Margin-left: 10px;">
+                <!--<div style="Margin-right: 10px; Margin-left: 10px;">-->
                   <!--<![endif]-->
                   <!--[if mso]><table width="100%" cellpadding="0" cellspacing="0" border="0"><tr><td style="padding-right: 10px; padding-left: 10px;"><![endif]-->
                   <div style="font-size:19px;line-height:18px; font-weight:bold; font-family: 'Prompt', sans-serif; text-align:left;">
-                    <p style="margin: 0;font-size: 19px;line-height: 21px;text-align: center"><span style="font-size: 19px; line-height: 21px;">Cześć! Dodałam nowy produkt być może Cię zainteresuje. </span></p>
+                    <p style="margin: 0;font-size: 19px;line-height: 21px;text-align: center"><span style="font-size: 19px; line-height: 21px;">Cześć! Dodałam nowy produkt. Być może Cię zainteresuje. </span></p>
                     </br>
-                    <p style="margin: 0;font-size: 19px;line-height: 21px;text-align: center"><span style="font-size: 19px; line-height: 21px;"> Pozdrawiam, Joanna Kuczyńska.</span></p>
+                    <p style="margin: 0;font-size: 19px;line-height: 21px;text-align: center"><span style="font-size: 19px; line-height: 21px;"> Pozdrawiam,</span></p>
+                     <p style="margin: 0;font-size: 19px;line-height: 21px;text-align: center"><span style="font-size: 19px; line-height: 21px;">Joanna Kuczyńska.</span></p>
                   </div>
                   <!--[if mso]></td></tr></table><![endif]-->
                   <div style="line-height: 10px; font-size: 1px">&nbsp;</div>
+                   <div style="line-height: 10px; font-size: 1px">&nbsp;</div>
+                    <div style="line-height: 10px; font-size: 1px">&nbsp;</div>
+                     <div style="line-height: 10px; font-size: 1px">&nbsp;</div>
+                      <div style="line-height: 10px; font-size: 1px">&nbsp;</div>
+                       <div style="line-height: 10px; font-size: 1px">&nbsp;</div>
+                        <div style="line-height: 10px; font-size: 1px">&nbsp;</div>
+                         <div style="line-height: 10px; font-size: 1px">&nbsp;</div>
+                          <div style="line-height: 10px; font-size: 1px">&nbsp;</div>
                   <!--[if !mso]><!-->
-                </div>
+                <!--</div>-->
                 <!--<![endif]-->
-              </div>
+              <!--</div>-->
               <div style="width: 100% !important;">
                 <div align="center" class="button-container center" style="Margin-right: 10px;Margin-left: 10px;">
                   <div style="line-height:15px;font-size:1px">&nbsp;</div>
-                  <a href="" id="goToProduct" target="_blank" style="color: #ffffff; text-decoration: none;">
+                  <a id="goToProduct" style=" font-size: 24px;    padding: 10px 16px; text-decoration: none;  outline: none;   color: #fff;  background-color: #67A3D9;  border: none; border-radius: 2px; cursor: pointer; font-family: 'Prompt', sans-serif; text-align: center;">
                     <!--[if mso]>
       <v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" href="" style="height:42px; v-text-anchor:middle; width:194px;" arcsize="62%" strokecolor="#67A3D9" fillcolor="#67A3D9" >
       <w:anchorlock/><center style="color:#ffffff; font-family: 'Prompt', sans-serif; font-size:16px;">
     <![endif]-->
-                    <!--[if !mso]><!--><button style=" font-size: 24px;    padding: 10px 16px; text-decoration: none;  outline: none;   color: #fff;  background-color: #67A3D9;  border: none; border-radius: 2px; cursor: pointer; font-family: 'Prompt', sans-serif; text-align: center;"><!--<![endif]-->
-     Zobacz produkt
-    <!--[if !mso]><!--></button>
+                    <!--[if !mso]><!--><!--<![endif]-->
+           Zobacz produkt
+    <!--[if !mso]><!-->
                     <!--<![endif]-->
                     <!--[if mso]>
           </center>
@@ -373,7 +382,7 @@
               </div>
               <div style="line-height: 30px; font-size: 1px">&nbsp;</div>
               <p style="margin: 0;font-size: 15px;line-height: 21px;text-align: center; font-family: 'Prompt', sans-serif;">
-                <span style="font-size: 15px; line-height: 21px;"> 
+                <span style="font-size: 10px; line-height: 21px;"> 
                                             <a id="cancelSubLink" style="color: #B8B8C0; text-decoration: none;">
             <u>Anuluj subskrybcję</u>
           </a></span></p>
@@ -391,10 +400,10 @@
       class="block-grid ">
       <div style="border-collapse: collapse;display: table;width: 100%;">
         <!--[if (mso)|(IE)]><table width="100%" cellpadding="0" cellspacing="0" border="0"><tr><td style="background-color:#ffffff;" align="center"><table cellpadding="0" cellspacing="0" border="0" style="width: 500px;"><tr class="layout-full-width" style="background-color:transparent;"><![endif]-->
-        <!--[if (mso)|(IE)]><td align="center" width="500" style=" width:500px; padding-right: 0px; padding-left: 0px; border-top: 0px solid transparent; border-left: 0px solid transparent; border-bottom: 0px solid transparent; border-right: 0px solid transparent;" valign="top"><![endif]-->
+        <!--[if (mso)|(IE)]><td align="center" wclientIdth="500" style=" width:500px; padding-right: 0px; padding-left: 0px; border-top: 0px solid transparent; border-left: 0px solclientId transparent; border-bottom: 0px solclientId transparent; border-right: 0px solclientId transparent;" valign="top"><![endif]-->
         <div class="col num12" style="min-width: 320px;max-width: 500px;width: 500px;width: calc(18000% - 89500px);background-color: transparent;">
           <!--[if (!mso)&(!IE)]><!-->
-          <div style="border-top: 0px solid transparent; border-left: 0px solid transparent; border-bottom: 0px solid transparent; border-right: 0px solid transparent;">
+          <div style="border-top: 0px solid transparent; border-left: 0px solclientId transparent; border-bottom: 0px solclientId transparent; border-right: 0px solclientId transparent;">
             <!--<![endif]-->
             <div style="background-color: transparent;">
               <div style="line-height: 30px; font-size:1px">&nbsp;</div>
