manage product panel

--- a/CrochetByJk/Content/MailTemplates/newsletter_template.html
+++ b/CrochetByJk/Content/MailTemplates/newsletter_template.html
@@ -223,10 +223,10 @@
         class="block-grid ">
         <div style="border-collapse: collapse;display: table;width: 100%;">
           <!--[if (mso)|(IE)]><table width="100%" cellpadding="0" cellspacing="0" border="0"><tr><td style="background-color:transparent;" align="center"><table cellpadding="0" cellspacing="0" border="0" style="width: 500px;"><tr class="layout-full-width" style="background-color:transparent;"><![endif]-->
-          <!--[if (mso)|(IE)]><td align="center" wclientIdth="500" style=" width:500px; padding-right: 0px; padding-left: 0px; border-top: 0px solid transparent; border-left: 0px solclientId transparent; border-bottom: 0px solclientId transparent; border-right: 0px solclientId transparent;" valign="top"><![endif]-->
+          <!--[if (mso)|(IE)]><td align="center" wclientCategoryIdth="500" style=" width:500px; padding-right: 0px; padding-left: 0px; border-top: 0px solid transparent; border-left: 0px solclientId transparent; border-bottom: 0px solclientCategoryId transparent; border-right: 0px solclientCategoryId transparent;" valign="top"><![endif]-->
           <div class="col num12" style="min-width: 320px;max-width: 500px;width: 500px;width: calc(18000% - 89500px);background-color: transparent;">
             <!--[if (!mso)&(!IE)]><!-->
-            <div style="border-top: 0px solid transparent; border-left: 0px solclientId transparent; border-bottom: 0px solclientId transparent; border-right: 0px solclientId transparent;">
+            <div style="border-top: 0px solid transparent; border-left: 0px solclientId transparent; border-bottom: 0px solclientCategoryId transparent; border-right: 0px solclientCategoryId transparent;">
               <!--<![endif]-->
               <div style="background-color: transparent;">
                 <div style="line-height: 5px; font-size:1px">&nbsp;</div>
@@ -266,10 +266,10 @@
       class="block-grid ">
       <div style="border-collapse: collapse;display: table;width: 100%;">
         <!--[if (mso)|(IE)]><table width="100%" cellpadding="0" cellspacing="0" border="0"><tr><td style="background-color:#FFFFFF;" align="center"><table cellpadding="0" cellspacing="0" border="0" style="width: 500px;"><tr class="layout-full-width" style="background-color:transparent;"><![endif]-->
-        <!--[if (mso)|(IE)]><td align="center" wclientIdth="500" style=" width:500px; padding-right: 0px; padding-left: 0px; border-top: 0px solid transparent; border-left: 0px solclientId transparent; border-bottom: 0px solclientId transparent; border-right: 0px solclientId transparent;" valign="top"><![endif]-->
+        <!--[if (mso)|(IE)]><td align="center" wclientCategoryIdth="500" style=" width:500px; padding-right: 0px; padding-left: 0px; border-top: 0px solid transparent; border-left: 0px solclientId transparent; border-bottom: 0px solclientCategoryId transparent; border-right: 0px solclientCategoryId transparent;" valign="top"><![endif]-->
         <div class="col num12" style="min-width: 320px;max-width: 500px;width: 500px;width: calc(18000% - 89500px);background-color: transparent;">
           <!--[if (!mso)&(!IE)]><!-->
-          <div style="border-top: 0px solid transparent; border-left: 0px solclientId transparent; border-bottom: 0px solclientId transparent; border-right: 0px solclientId transparent;">
+          <div style="border-top: 0px solid transparent; border-left: 0px solclientId transparent; border-bottom: 0px solclientCategoryId transparent; border-right: 0px solclientCategoryId transparent;">
             <!--<![endif]-->
             <div style="background-color: transparent;">
               <div style="width: 100% !important;">
@@ -313,10 +313,10 @@
       class="block-grid ">
       <div style="border-collapse: collapse;display: table;width: 100%;">
         <!--[if (mso)|(IE)]><table width="100%" cellpadding="0" cellspacing="0" border="0"><tr><td style="background-color:#FFFFFF;" align="center"><table cellpadding="0" cellspacing="0" border="0" style="width: 500px;"><tr class="layout-full-width" style="background-color:transparent;"><![endif]-->
-        <!--[if (mso)|(IE)]><td align="center" wclientIdth="500" style=" width:500px; padding-right: 0px; padding-left: 0px; border-top: 0px solid transparent; border-left: 0px solclientId transparent; border-bottom: 0px solclientId transparent; border-right: 0px solclientId transparent;" valign="top"><![endif]-->
+        <!--[if (mso)|(IE)]><td align="center" wclientCategoryIdth="500" style=" width:500px; padding-right: 0px; padding-left: 0px; border-top: 0px solid transparent; border-left: 0px solclientId transparent; border-bottom: 0px solclientCategoryId transparent; border-right: 0px solclientCategoryId transparent;" valign="top"><![endif]-->
         <div class="col num12" style="min-width: 320px;max-width: 500px;width: 500px;width: calc(18000% - 89500px);background-color: transparent;">
           <!--[if (!mso)&(!IE)]><!-->
-          <div style="border-top: 0px solid transparent; border-left: 0px solclientId transparent; border-bottom: 0px solclientId transparent; border-right: 0px solclientId transparent;">
+          <div style="border-top: 0px solid transparent; border-left: 0px solclientId transparent; border-bottom: 0px solclientCategoryId transparent; border-right: 0px solclientCategoryId transparent;">
             <!--<![endif]-->
             <div style="background-color: transparent;">
               <div style="line-height: 30px; font-size:1px">&nbsp;</div>
@@ -400,10 +400,10 @@
       class="block-grid ">
       <div style="border-collapse: collapse;display: table;width: 100%;">
         <!--[if (mso)|(IE)]><table width="100%" cellpadding="0" cellspacing="0" border="0"><tr><td style="background-color:#ffffff;" align="center"><table cellpadding="0" cellspacing="0" border="0" style="width: 500px;"><tr class="layout-full-width" style="background-color:transparent;"><![endif]-->
-        <!--[if (mso)|(IE)]><td align="center" wclientIdth="500" style=" width:500px; padding-right: 0px; padding-left: 0px; border-top: 0px solid transparent; border-left: 0px solclientId transparent; border-bottom: 0px solclientId transparent; border-right: 0px solclientId transparent;" valign="top"><![endif]-->
+        <!--[if (mso)|(IE)]><td align="center" wclientCategoryIdth="500" style=" width:500px; padding-right: 0px; padding-left: 0px; border-top: 0px solid transparent; border-left: 0px solclientId transparent; border-bottom: 0px solclientCategoryId transparent; border-right: 0px solclientCategoryId transparent;" valign="top"><![endif]-->
         <div class="col num12" style="min-width: 320px;max-width: 500px;width: 500px;width: calc(18000% - 89500px);background-color: transparent;">
           <!--[if (!mso)&(!IE)]><!-->
-          <div style="border-top: 0px solid transparent; border-left: 0px solclientId transparent; border-bottom: 0px solclientId transparent; border-right: 0px solclientId transparent;">
+          <div style="border-top: 0px solid transparent; border-left: 0px solclientId transparent; border-bottom: 0px solclientCategoryId transparent; border-right: 0px solclientCategoryId transparent;">
             <!--<![endif]-->
             <div style="background-color: transparent;">
               <div style="line-height: 30px; font-size:1px">&nbsp;</div>
